# oompa-2025_08

./: .flake8  .gitignore  .gitmodules  EXECUTIVE_SUMMARY.md  KNOWN_ISSUES.md  LICENSE  README.md  pyproject.toml
oompa_types/action/: action.py  action_bases.py  action_descriptor.py  actions.py  apply_result.py
oompa_types/condition/: binary_condition_base.py  condition.py  condition_bases.py  condition_of_state_property.py
oompa_types/domain/: arguments.py  domain.py  domain_bases.py  operator.py  operator_bases.py  placeholder.py  placeholder_bases.py  placeholder_factories.py  problem.py  problem_bases.py  problem_helpers.py  quantification.py  state.py  stateful.py  valued.py  valued_bases.py
oompa_types/effect/: effect.py  effect_bases.py
oompa_types/goal_network/: NULL_GOAL.py  goal.py  goal_network.py  goal_network_for_statement.py  goal_network_node_for_statement.py  gtn.py  gtn_bases.py  gtn_node.py  gtn_node_bases.py  node.py
oompa_types/method/: goal_method.py  goal_method_bases.py  goal_method_descriptor.py  methods.py
oompa_types/objects/: named.py  named_hash.py  typed.py  world_object.py  world_type.py
oompa_types/state_property/: state_properties.py  state_property.py  state_property_bases.py  state_property_descriptor.py
oompa_types/utils/: descriptor_helpers.py  print_utils.py
tests/: depot-notes.txt  depot_domain.py  extended_travel_domain.py  restaurant_domain.py  simple_travel_domain.py  test_depot.py  test_extended_travel_hgn.py  test_get_applicable_actions.py  test_helpers.py  test_restaurant.py  test_simple_travel_hgn.py  test_state_property.py  test_transport_hgn.py  test_transport_probabilistic.py  transport_domain.py
tests/koala/: rover.py
