[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
classifiers = [
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent",
]
dependencies = [
  "numpy>=1.22.3",
  "aenum>=3.1.15",
  "networkx",
  "frozendict",
  "makro_utils @ {root:uri}/lib/makro-python-utils",
]
description = "Type Module for Object-Oriented Modeling for Planning and Acting (OOMPA)"
name = "oompa_types"
readme = "README.md"
requires-python = ">=3.12"
version = "0.0.1"

[project.optional-dependencies]
dev = [
  "ipython",
  "black",
  "ruff",
  "mypy",
  "pre-commit",
  "hatch",
  "pytest",
  "pytest-cov",
  "pytest-xdist",
  # TODO: typing stubs?
]
extras = [
  "matplotlib>=3.5.2",
  "PyQt6",
  "ipykernel",
]
docs = [
  "sphinx"
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build]
ignore-vcs = true
packages = ["oompa_types"]

[tool.hatch.envs.default]
python = "3.12"
features = ["dev"]
# pre-install-commands = ["pip3.12 install --pre torch"]
post-install-commands = [
  # "pre-commit install",
  "mypy --install-types --non-interactive . || true",
]

[tool.hatch.envs.extras]
features = ["dev", "extras"]
pre-install-commands = ["pip3.12 install --pre torch"]

[tool.hatch.envs.extras.env-vars]
PIP_EXTRA_INDEX_URL = "https://download.pytorch.org/whl/nightly/cpu"

[tool.black]
line-length = 101

[tool.ruff]
line-length = 101
src = ["src"]
select = [
  "F",   # pyflakes
  "E",   # pycodestyle
  "W",   # pycodestyle
  "C90", # mccabe
  "I",   # isort
  "N",   # pep8-naming
  "D",   # pydocstyle
  "B",   # bugbear
  "UP",  # pyupgrade
]
ignore = [
  "D1",   # missing docstrings
  "B905", # zip w/o explicit `strict=`
]

[tool.ruff.pydocstyle]
convention = "google"

[tool.mypy]
plugins = "numpy.typing.mypy_plugin"

[[tool.mypy.overrides]]
module = [
  "megagraph.*",
  "aenum.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests/"]
addopts = [
  "--import-mode=importlib",
  "--cov=oompa_types",
  "--cov-report=xml:tests/coverage.xml",
  "--numprocesses=auto",
]
filterwarnings = ["ignore::DeprecationWarning"]

[tool.coverage.run]
data_file = "tests/.coverage"
